--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,56 @@
 <resources>
-    <string name="app_name">TODO_List</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="app_name">정각에 해야지</string>
+    <string name="home">Home</string>
+    <string name="schedule_eng">Schedule</string>
+    <string name="routine_eng">Routine</string>
+    <string name="calendar_eng">Calender</string>
+    <string name="setting_eng">Setting</string>
+
+    <string name="daily">매일</string>
+    <string name="empty_string"/>
+    <string name="days"> 월 화 수 목 금 토 일</string>
+    <string-array name = "Days">
+        <item>일 </item>
+        <item>월 </item>
+        <item>화 </item>
+        <item>수 </item>
+        <item>목 </item>
+        <item>금 </item>
+        <item>토 </item>
+    </string-array>
+
+    <string-array name = "ScheduleMenu">
+        <item>수정</item>
+        <item>삭제</item>
+        <item>완료</item>
+    </string-array>
+
+    <string name="date_picker_title">기간을 선택해 주세요.</string>
+    
+    <string name="permission_denied_message">권한이 거부되었습니다. 설정 > 권한에서 허용해주세요.</string>
+    <string name="permission_denied_toast_message">권한 거부</string>
+
+    <string name="routine_delete_dialog_title">다음 내용을 삭제하시겠습니까?</string>
+
+    <string name="dialog_positive_text">확인</string>
+    <string name="dialog_negative_text">취소</string>
+
+    <string name="calender_icon_button">캘린더 아이콘 버튼</string>
+    <string name="title">제목</string>
+    <string name="cancel">취소</string>
+    <string name="register">등록</string>
+
+    <string name="schedule">일정</string>
+    <string name="today_todo">오늘 할 일</string>
+    <string name="schedule_title">일정 이름</string>
+    <string name="optional_field">선택 사항</string>
+    <string name="detail_content">상세 내용</string>
+    <string name="period">기간</string>
+    <string name="date_type">YYYYMMDD</string>
+    <string name="tilde">~</string>
+    <string name="recent_sort">최신순</string>
+    <string name="deadline_sort">마감순</string>
+
+    <string name="routine_register_floating_button">루틴 등록 버튼</string>
+    <string name="schedule_register_floating_button">일정 등록 버튼</string>
 </resources>
