--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
 
     <string name="daily">매일</string>
     <string name="empty_string"/>
-    <string name="days"> 월 화 수 목 금 토 일</string>
+    <string name="days">" 월 화 수 목 금 토 일"</string>
     <string-array name = "Days">
         <item>일 </item>
         <item>월 </item>
